--- a/trmIdenExp/longVowelIdent.html
+++ b/trmIdenExp/longVowelIdent.html
@@ -100,6 +100,7 @@
 
 inst = ''; // Variable for storing the instructions
 hVt_words=[]; // Variable for storing the input data (csv)
+kVkV_words=[];
 noOfRepetitions = 3; // will be multiplied by 2
 stimuli_continuum = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
 practice_continuum = [1, 10]; 
@@ -136,9 +137,9 @@ $.ajax({
 $.ajax({
     type: "GET", 
     async: false, 
-    url: "stimuli/hVt_stimuli.csv", 
+    url: "stimuli/kVKv_stimuli.csv", 
     dataType: "text", 
-    success: function(csv) {hVt_words=csvJSON(csv)}
+    success: function(csv) {kVkV_words=csvJSON(csv)}
 });
 
 
