--- a/trmIdenExp/longVowelIdent.html
+++ b/trmIdenExp/longVowelIdent.html
@@ -279,7 +279,7 @@ var fcnf_instructionsBeforeSurvey_block = {
 
 **/
 
-fcnf_words = jsPsych.randomization.shuffle(hVt_words);
+fcnf_words = jsPsych.randomization.shuffle(kVkV_words);
 
 /** This creates the variable that all the trials will be stored in. To run the task,
 	push this to the timeline
@@ -411,8 +411,8 @@ practice_block.push(
         }
 );
 
-for(var i=0; i<hVt_words.length; i++){
-    currentWord = hVt_words[i];
+for(var i=0; i<kVkV_words.length; i++){
+    currentWord = kVkV_words[i];
     
     for (var k=0; k<practice_continuum.length; k++){
             /**	Plays the sound **/
