--- a/trmIdenExp/longVowelIdent.html
+++ b/trmIdenExp/longVowelIdent.html
@@ -137,7 +137,7 @@ $.ajax({
 $.ajax({
     type: "GET", 
     async: false, 
-    url: "stimuli/kVKv_stimuli.csv", 
+    url: "stimuli/kVkV_stimuli.csv", 
     dataType: "text", 
     success: function(csv) {kVkV_words=csvJSON(csv)}
 });
