--- a/trmIdenExp/longVowelIdent.html
+++ b/trmIdenExp/longVowelIdent.html
@@ -251,7 +251,7 @@ var fcnf_instructionsAfterPractice_block = {
                 practiceData = jsPsych.data.get().filter([{phase: "practice"}]);  // only getting response phases
                 practiceData = practiceData.ignore(['internal_node_id', 'trial_type']);  // ignoring internal node id
 
-                //submitData(practiceData.csv());  // saves the data to  google form
+                submitData(practiceData.csv());  // saves the data to  google form
             }
 }
 
@@ -582,7 +582,7 @@ function submitData(filedata){
     $.ajax({
     type: "GET", 
     async: false, 
-    url: "https://docs.google.com/forms/d/e/1FAIpQLSdUtwhzs44o_AvYoaKjByelgYc996tj3ldHLjPudrzxlkxKAg/formResponse?&submit=Submit?usp=pp_url&entry.231415358=" + resultsEscaped, 
+    url: "https://docs.google.com/forms/d/e/1FAIpQLSfyeHDFTJZ8_DyaR2wemgpSxAOwQl1ZUsr-guh-O794Ax3DMQ/viewform?usp=sf_link" + resultsEscaped, 
     dataType: "text"
     });
 }
