--- a/trmIdenExp/longVowelIdent.html
+++ b/trmIdenExp/longVowelIdent.html
@@ -582,7 +582,10 @@ function submitData(filedata){
     $.ajax({
     type: "GET", 
     async: false, 
-    url: "https://docs.google.com/forms/d/e/1FAIpQLSfyeHDFTJZ8_DyaR2wemgpSxAOwQl1ZUsr-guh-O794Ax3DMQ/viewform?usp=sf_link" + resultsEscaped, 
+    url: "https://docs.google.com/forms/d/e/1FAIpQLSfyeHDFTJZ8_DyaR2wemgpSxAOwQl1ZUsr-guh-O794Ax3DMQ/formResponse?&submit=Submit?usp=pp_url&entry.193574675=" + resultsEscaped,
+    // Justine: https://docs.google.com/forms/d/e/1FAIpQLSdUtwhzs44o_AvYoaKjByelgYc996tj3ldHLjPudrzxlkxKAg/formResponse?&submit=Submit?usp=pp_url&entry.231415358=
+    //  Jenice: https://docs.google.com/forms/d/e/1FAIpQLSfyeHDFTJZ8_DyaR2wemgpSxAOwQl1ZUsr-guh-O794Ax3DMQ/viewform?usp=pp_url
+    // entry id = 193574675
     dataType: "text"
     });
 }
@@ -621,7 +624,9 @@ function stamp(){
 **/
 function finish() {
     DOM_target = document.querySelector('#jspsych-content'); 
-    linkToPrefilledGoogleForm = 'https://docs.google.com/forms/d/e/1FAIpQLSeZkgvLJtpdoHSYwz_UbGytqLV7XEEZlAKpC2rZfo67g2RLDw/viewform?usp=pp_url&entry.1797296953=' + participantID;
+    linkToPrefilledGoogleForm = 'https://docs.google.com/forms/d/e/1FAIpQLSc1aX3wS_am6_2Ny514yX9tQesllDFFsXjhkaBn627dTl0pbA/viewform?usp=pp_url&entry.873945936=' + participantID;
+    //                  Justine: https://docs.google.com/forms/d/e/1FAIpQLSeZkgvLJtpdoHSYwz_UbGytqLV7XEEZlAKpC2rZfo67g2RLDw/viewform?usp=pp_url&entry.1797296953=
+    //                   Jenice: https://docs.google.com/forms/d/e/1FAIpQLSc1aX3wS_am6_2Ny514yX9tQesllDFFsXjhkaBn627dTl0pbA/viewform?usp=pp_url&entry.873945936=
     linkToPrefillQualtrics = 'https://auckland.au1.qualtrics.com/jfe/form/SV_aVjg6I7NFM7akxU?Q_PopulateResponse={%22QID1%22:%22' + participantID + "%22}";
     DOM_target.innerHTML ='<p style="text-align: center;">This is the end of the listening task. Thank you very much for your participation! </p><br/>\
     <p style="text-align: center;">Please click <a href="' + linkToPrefillQualtrics + '",target="_blank">here</a> to proceed to the demographics survey. </p>' ; 
