--- a/trmIdenExp/longVowelIdent.html
+++ b/trmIdenExp/longVowelIdent.html
@@ -109,7 +109,7 @@ hVt_words=[]; // Variable for storing the input data (csv)
 kVkV_words=[];
 noOfRepetitions = 3; // will be multiplied by 2
 //stimuli_continuum = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
-stimuli_continuum = [1, 2, 4, 6, 8, 10];
+stimuli_continuum = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
 practice_continuum = [1, 10]; 
 consent = '';
 participantID = '';
