--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Projects/Experiments</title>
+      <title>Projects</title>
    </head>
    <body>
-      <a href="./trmIdenExp">Vowel Length Discrimination</a>
+      <h> List of Project/Experiments</h>
+      <a href="./trmIdenExp/longVowelIdent.html">Vowel Length Discrimination</a>
    </body>
 </html>
