--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Projects</title>
    </head>
    <body>
-      <h> List of Project/Experiments</h>
+      <h1> List of Project/Experiments</h1>
       <a href="./trmIdenExp/longVowelIdent.html">Vowel Length Discrimination</a>
    </body>
 </html>
