--- a/trmIdenExp_tutahi/longVowelIdent.html
+++ b/trmIdenExp_tutahi/longVowelIdent.html
@@ -342,7 +342,7 @@ for(var i=0; i<fcnf_words.length; i++){
                 fcnf_block.push(
                     {
                         type: jsPsychAudioKeyboardResponse, 
-                        stimulus: 'sound/'+ currentWord.sound+'_'+ fcnf_trials[k] + '.wav', 
+                        stimulus: 'sound/tutahi_'+ currentWord.sound+'_'+ fcnf_trials[k] + '.wav', 
                         prompt: '<img src="img/sound.jpg" height="200" width="200">', 
                         choices: "NO_KEYS", 
                         trial_duration: 1600, 
@@ -395,7 +395,7 @@ for(var i=0; i<fcnf_words.length; i++){
                 fcnf_block.push(
                     {
                         type: jsPsychAudioKeyboardResponse, 
-                        stimulus: 'sound/'+ currentWord.sound+'_'+ fcnf_trials[k] + '.wav', 
+                        stimulus: 'sound/tutahi_'+ currentWord.sound+'_'+ fcnf_trials[k] + '.wav', 
                         prompt: '<img src="img/sound.jpg" height="200" width="200">', 
                         choices: "NO_KEYS", 
                         trial_duration: 1600, 
@@ -454,7 +454,7 @@ for(var i=0; i<kVkV_words.length; i++){
             practice_block.push(
                 {
                     type: jsPsychAudioKeyboardResponse, 
-                    stimulus: 'sound/'+ currentWord.sound+'_'+ practice_continuum[k] + '.wav', 
+                    stimulus: 'sound/tutahi_'+ currentWord.sound+'_'+ practice_continuum[k] + '.wav', 
                     prompt: '<img src="img/sound.jpg" height="200" width="200">', 
                     choices: "NO_KEYS", 
                     trial_duration: 1600, 
